# Conductor

./: .gitignore  ARCHITECTURE_COMPARISON.txt  DETAILED_ANALYSIS.md  Expected Claude Code Web Behavior.md  IMPLEMENTATION_SUMMARY.md  KEY_FILES_INDEX.md  LICENSE  PARALLEL_EXECUTION_ANALYSIS.md  PRD.md  README.md  STORIES.md  VISION.md  pyproject.toml  pytest.ini  test_conductor_fixes.py  test_mcp_connection.py
config/: default.yaml
docs/: CREATE_PR_BUTTON.md  DOCTOR_MODE.md  MVP_REVIEW.md  PARALLEL_EXECUTION.md  PROJECT_COMPLETE.md  QUICK_START_GUIDE.md  REMOTE_BROWSER_SETUP.md  SPRINT1_IMPLEMENTATION.md  SPRINT2_IMPLEMENTATION.md  SUCCESS_SUMMARY.md
examples/: simple-tasks.yaml  tasks.yaml
src/conductor/: __init__.py  doctor.py  main.py  orchestrator.py  orchestrator_parallel.py  orchestrator_tui.py  wizard.py
src/conductor/browser/: __init__.py  auth.py  element_discovery.py  peek.py  pr_automation.py  session.py  submission.py
src/conductor/mcp/: __init__.py  browser.py  browser_snapshot_parser.py  client.py
src/conductor/tasks/: __init__.py  loader.py  models.py
src/conductor/themes/: __init__.py  themes.py
src/conductor/tui/: __init__.py  app.py  splash.py
src/conductor/utils/: __init__.py  config.py  retry.py
tests/: __init__.py  test_retry.py  test_submission.py  test_task_loader.py  test_tui.py
todo/: 05-domain-research.yaml
